[package]
name = "starknet-crypto-py"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "starknet_crypto_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["num-bigint"] }
num-bigint = "0.4"
starknet-crypto = "0.8.1"

[build-dependencies]
cc = { version = "1" }
pyo3-build-config = { version = "^0.21.2" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = "off"
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0
